fix: update project details in projects.json and enhance styling in ProjectCard.scss for improved layout and readability

--- a/frontend/src/components/projectCard/ProjectCard.scss
+++ b/frontend/src/components/projectCard/ProjectCard.scss
@@ -12,6 +12,7 @@
     overflow: hidden;
     perspective: 1000px;
     box-shadow: 0 0 0 5px $first-color;
+    border: 1px solid rgba($first-color, 0.7);
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -97,7 +98,7 @@
         padding: 10px;
         height: auto;
         gap: 10px;
-        background-color: #f2f2f2;
+        background-color: rgba($fourth-color, 1);
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         overflow: visible;
         img {
@@ -121,10 +122,10 @@
         }
 
         .cardTitle {
-            font-size: 14px;
+            font-size: 18px;
             font-weight: 700;
             margin: 0;
-            color: $third-color;
+            color: darken($third-color, 30%);
         }
 
         ul {
@@ -136,24 +137,25 @@
             margin: 0;
 
             li {
-                background: $third-color;
+                background: $second-color;
                 color: white;
-                font-size: 10px;
+                font-size: 11px;
                 padding: 2px 6px;
                 border-radius: 4px;
             }
         }
 
         .cardDescription {
-            font-size: 12px;
-            color: $second-color;
+            font-size: 13px;
+            font-weight: 500;
+            color: darken($third-color, 30%);
         }
 
         .btnGit {
-            font-size: 11px;
+            font-size: 12px;
             padding: 6px 10px;
             width: auto;
-            background: $third-color;
+            background: $second-color;
             border-radius: 6px;
         }
     }
